bugfixing (the countdown is still not showing up :\)

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -33,9 +33,11 @@
   table {
     td {
       vertical-align: middle;
+      text-align: center;
     }
     #endContainer td {
       vertical-align: bottom;
+      text-align: center;
     }
   }
 }
@@ -45,13 +47,13 @@
     height: 100%;
 }
 
-#hostGame, #joinGame, #inputGameId, #joinGameId, #restartGame {
+.button {
   width: 200px;
   height: 100px;
   font-size: 24px;
   text-align: center;
   border: none;
-  margin: 5px;
+  margin: 5px 0px;
 }
 
 .hide {
